--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 Django==1.4.2
 argparse==1.2.1
-distribute==0.6.31
+boto==2.6.0
 dj-database-url==0.2.1
+django-storages==1.1.5
+django-tastypie==0.9.11
+gunicorn==0.14.6
+mimeparse==0.1.3
 psycopg2==2.4.5
+python-dateutil==1.5
 wsgiref==0.1.2
 South==0.7.3
