--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-tastypie==0.9.11
 gunicorn==0.14.6
 mimeparse==0.1.3
 psycopg2==2.4.5
+pysqlite=2.4.5
 python-dateutil==1.5
 wsgiref==0.1.2
 South==0.7.3
